@@ -5,6 +5,8 @@ import com.loadtest.app.dto.SummarizerModelDto;
 import com.loadtest.app.dto.UpdateSummarizerRequest;
 import com.loadtest.app.persistence.SummarizerModelEntity;
 import com.loadtest.app.persistence.SummarizerModelRepository;
+import com.loadtest.app.util.ApiMessages;
+import com.loadtest.app.util.SummarizerProviders;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -13,8 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -24,29 +24,29 @@ public class SummarizerService {
 
     @Transactional
     public SummarizerModelDto create(CreateSummarizerRequest request) {
-        if (repository.existsByName(request.getName())) {
-            throw new IllegalArgumentException("Summarizer with name '" + request.getName() + "' already exists");
+        if (repository.existsByName(request.name())) {
+            throw new IllegalArgumentException(ApiMessages.Summarizers.nameAlreadyExists(request.name()));
         }
         UUID id = UUID.randomUUID();
         OffsetDateTime now = OffsetDateTime.now();
-        String provider = normalizeProvider(request.getProvider());
-        String modelId = trimToEmpty(request.getModelId());
-        if ("EXTERNAL".equals(provider)) {
-            validateExternalIngestUrl(request.getBaseUrl());
+        String provider = normalizeProvider(request.provider());
+        String modelId = trimToEmpty(request.modelId());
+        if (SummarizerProviders.EXTERNAL.equals(provider)) {
+            validateExternalIngestUrl(request.baseUrl());
             if (modelId.isEmpty()) {
                 modelId = "external";
             }
         } else if (modelId.isEmpty()) {
-            throw new IllegalArgumentException("Model ID is required for OPENAI provider");
+            throw new IllegalArgumentException(ApiMessages.Summarizers.MODEL_ID_REQUIRED_OPENAI);
         }
         SummarizerModelEntity entity = SummarizerModelEntity.builder()
                 .id(id)
-                .name(request.getName())
+                .name(request.name())
                 .provider(provider)
-                .baseUrl(request.getBaseUrl())
+                .baseUrl(request.baseUrl())
                 .modelId(modelId)
-                .apiKeyEnvVar(request.getApiKeyEnvVar())
-                .enabled(request.getEnabled())
+                .apiKeyEnvVar(request.apiKeyEnvVar())
+                .enabled(request.enabled())
                 .createdAt(now)
                 .updatedAt(now)
                 .build();
@@ -57,37 +57,37 @@ public class SummarizerService {
 
     @Transactional(readOnly = true)
     public List<SummarizerModelDto> getAll() {
-        return repository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(this::toDto).toList();
     }
 
     @Transactional(readOnly = true)
     public List<SummarizerModelDto> getEnabled() {
-        return repository.findByEnabledTrue().stream().map(this::toDto).collect(Collectors.toList());
+        return repository.findByEnabledTrue().stream().map(this::toDto).toList();
     }
 
     @Transactional(readOnly = true)
     public SummarizerModelDto getById(UUID id) {
         SummarizerModelEntity entity = repository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Summarizer with id '" + id + "' not found"));
+                .orElseThrow(() -> new IllegalArgumentException(ApiMessages.Summarizers.notFoundById(id)));
         return toDto(entity);
     }
 
     @Transactional(readOnly = true)
     public SummarizerModelDto getByName(String name) {
         SummarizerModelEntity entity = repository.findByName(name)
-                .orElseThrow(() -> new IllegalArgumentException("Summarizer with name '" + name + "' not found"));
+                .orElseThrow(() -> new IllegalArgumentException(ApiMessages.Summarizers.notFoundByName(name)));
         return toDto(entity);
     }
 
     @Transactional
     public SummarizerModelDto update(UUID id, UpdateSummarizerRequest request) {
         SummarizerModelEntity entity = repository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Summarizer with id '" + id + "' not found"));
-        if (request.getProvider() != null) entity.setProvider(normalizeProvider(request.getProvider()));
-        if (request.getBaseUrl() != null) entity.setBaseUrl(request.getBaseUrl());
-        if (request.getModelId() != null) entity.setModelId(request.getModelId());
-        if (request.getApiKeyEnvVar() != null) entity.setApiKeyEnvVar(request.getApiKeyEnvVar());
-        if (request.getEnabled() != null) entity.setEnabled(request.getEnabled());
+                .orElseThrow(() -> new IllegalArgumentException(ApiMessages.Summarizers.notFoundById(id)));
+        if (request.provider() != null) entity.setProvider(normalizeProvider(request.provider()));
+        if (request.baseUrl() != null) entity.setBaseUrl(request.baseUrl());
+        if (request.modelId() != null) entity.setModelId(request.modelId());
+        if (request.apiKeyEnvVar() != null) entity.setApiKeyEnvVar(request.apiKeyEnvVar());
+        if (request.enabled() != null) entity.setEnabled(request.enabled());
         validatePersistedSummarizer(entity);
         entity.setUpdatedAt(OffsetDateTime.now());
         repository.save(entity);
@@ -98,35 +98,34 @@ public class SummarizerService {
     @Transactional
     public void delete(UUID id) {
         if (!repository.existsById(id)) {
-            throw new IllegalArgumentException("Summarizer with id '" + id + "' not found");
+            throw new IllegalArgumentException(ApiMessages.Summarizers.notFoundById(id));
         }
         repository.deleteById(id);
         log.info("Deleted summarizer model (id: {})", id);
     }
 
     private SummarizerModelDto toDto(SummarizerModelEntity e) {
-        return SummarizerModelDto.builder()
-                .id(e.getId())
-                .name(e.getName())
-                .provider(e.getProvider())
-                .baseUrl(e.getBaseUrl())
-                .modelId(e.getModelId())
-                .apiKeyEnvVar(e.getApiKeyEnvVar())
-                .enabled(e.getEnabled())
-                .createdAt(e.getCreatedAt())
-                .updatedAt(e.getUpdatedAt())
-                .build();
+        return new SummarizerModelDto(
+                e.getId(),
+                e.getName(),
+                e.getProvider(),
+                e.getBaseUrl(),
+                e.getModelId(),
+                e.getApiKeyEnvVar(),
+                e.getEnabled(),
+                e.getCreatedAt(),
+                e.getUpdatedAt());
     }
 
     private static String normalizeProvider(String provider) {
         if (provider == null || provider.isBlank()) {
-            return "OPENAI";
+            return SummarizerProviders.OPENAI;
         }
         String p = provider.trim().toUpperCase();
-        if ("EXTERNAL".equals(p)) {
-            return "EXTERNAL";
+        if (SummarizerProviders.EXTERNAL.equals(p)) {
+            return SummarizerProviders.EXTERNAL;
         }
-        return "OPENAI";
+        return SummarizerProviders.OPENAI;
     }
 
     private static String trimToEmpty(String s) {
@@ -135,23 +134,23 @@ public class SummarizerService {
 
     private static void validateExternalIngestUrl(String baseUrl) {
         if (baseUrl == null || baseUrl.isBlank()) {
-            throw new IllegalArgumentException("Полный URL приёма пакета (baseUrl) обязателен для провайдера EXTERNAL");
+            throw new IllegalArgumentException(ApiMessages.Upload.EXTERNAL_BASE_URL_REQUIRED);
         }
         String t = baseUrl.trim();
         if (!t.matches("(?i)https?://.*")) {
-            throw new IllegalArgumentException("baseUrl для EXTERNAL должен начинаться с http:// или https://");
+            throw new IllegalArgumentException(ApiMessages.Upload.EXTERNAL_BASE_URL_SCHEME);
         }
     }
 
     private void validatePersistedSummarizer(SummarizerModelEntity e) {
         String p = e.getProvider();
-        if ("EXTERNAL".equalsIgnoreCase(p)) {
+        if (SummarizerProviders.EXTERNAL.equalsIgnoreCase(p)) {
             validateExternalIngestUrl(e.getBaseUrl());
             if (e.getModelId() == null || e.getModelId().isBlank()) {
                 e.setModelId("external");
             }
         } else if (e.getModelId() == null || e.getModelId().isBlank()) {
-            throw new IllegalArgumentException("Model ID is required for OPENAI provider");
+            throw new IllegalArgumentException(ApiMessages.Summarizers.MODEL_ID_REQUIRED_OPENAI);
         }
     }
 }
